Various skill fixes, mostly to do with positioning - most position based skills encode the position, which should be used instead of chr.getPosition()